fix: login scrollbar style changed

--- a/src/app/auth/login.component.scss
+++ b/src/app/auth/login.component.scss
@@ -22,6 +22,9 @@ form {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+  overflow: auto;
+  scrollbar-color: none;
+  scrollbar-width: none;
 
   .body-split-line {
     display: flex;
